gcc/testsuite/gdc.test/compilable/imports/test7491a.d
module imports.test7491a;
