gcc/testsuite/gdc.test/fail_compilation/extra-files/bar11453.d
module foo11453.bar11453;
